--- a/aws-eks-terraform/.gitignore
+++ b/aws-eks-terraform/.gitignore
@@ -9,7 +9,7 @@
 crash.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data
-*.tfvars
+#.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so are not checked in
 override.tf
